--- a/build.gradle
+++ b/build.gradle
@@ -89,11 +89,11 @@ mainClassName = "com.miguno.bootstrap.gtm.BobRoss"
 
 findbugs {
         toolVersion = "2.0.1"
-        sourceSets = [sourceSets.main]
+        //sourceSets = [sourceSets.main]
         ignoreFailures = true
         reportsDir = file("$project.buildDir/findbugsReports")
         effort = "max"
-        reportLevel = "high"
-        omitVisitors = ["FindNonShortCircuit"]
-        includeFilter = file("$rootProject.projectDir/config/findbugs/includeFilter.xml")
+        reportLevel = "medium"
+        //omitVisitors = ["FindNonShortCircuit"]
+        //includeFilter = file("./config/findbugs/includeFilter.xml")
    }
